@@ -1,5 +1,10 @@
 2008-02-07  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/totemPlugin.cpp: Fix the DivX plugin not getting
+	any URIs to play on the Stage6 website
+
+2008-02-07  Bastien Nocera  <hadess@hadess.net>
+
 	* browser-plugin/Makefile.am: Add a log domain for easier debugging
 	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_play):
 	Tell the plugin we had a button press if we don't have a URI to
